46
================

26/03/22 Add Mozambique en/pt locales
24/03/22 Use safer/quicker regex rather than DOM for removing HTML tags 
23/03/22 Adoption checkout causing blank payment types from movement tab
23/03/22 SQL interface counting select query results off by 1
23/03/22 Docs: Do not include boarding in TOTALCOSTS for off-shelter animals
23/03/22 Use DOCMEDIAID not name for document images, stop issues with duplicates
22/03/22 Dialogs were showing last changed instead of created time
21/03/22 csvimport: Support ORIGINALOWNERFLAGS column
21/03/22 Setting location+unit via bulk change animals now writes log entries
21/03/22 Stack nested tables vertically on mobile to prevent h scroll #1103
19/03/22 Remove redundant tooltips from animals, add callouts/placeholders
19/03/22 Fix CurrentOwnerFirstname/Lastname tokens for non-shelter animals
17/03/22 Prevent endless loop with collisions using OOO coding scheme
17/03/22 Bulk change animals can now remove flags #1112
17/03/22 Publishing option to include/exclude non-microchipped #1113
17/03/22 CSV import: allow import of PDF files via ANIMALPDFDATA/NAME #888
17/03/22 PetRescue: always send microchips as they have a hide option now
15/03/22 Allow adoption checkout from Move->Adopt an animal #1110
15/03/22 SavourLife: Clear dogId after calling setDogAdopted/DeleteDog
15/03/22 Auto-updater should still check DB type/version
14/03/22 DB update to remove old ASM2 report definitions
11/03/22 Send saved clinic documents to animal if owner not available
11/03/22 Audit emails sent by diary notes
11/03/22 Fix querybuilder, CodeMirror schema change broke it
10/03/22 Add media_file service API call
09/03/22 PetFinder: Filter out permanent foster/trials from stray upload
09/03/22 Sort incidents desc so newest are included above search limit
09/03/22 Advanced find intake searches DateBroughtIn and MostRecentEntry
09/03/22 Correct table/column schema for new CodeMirror
09/03/22 Fix RTL issues with SQL/HTML editor